typecheck/tests/micro/good/test6.c
int main(void) {
	int a;
	a = 0;
	return 1;
	a = 2;
	return 2;
}
