typecheck/tests/micro/bad/while_void.c
void apple(void)
{return;
}

void main(void)
{
	while(apple())
	{}
return;
}